--- a/chilesRellenos/styles.css
+++ b/chilesRellenos/styles.css
@@ -1,9 +1,9 @@
 body {
-    
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 #bottomSection {
-    background-color: rgb(200, 218, 196);
+    background-color: rgb(184, 201, 181);
     padding: 20px;
 }
 
@@ -20,5 +20,10 @@ img {
 }
 
 #topSection {
-    margin: 20px;
+    padding: 20px;
+    background-color: whitesmoke;
+}
+
+button {
+    background-color: rgb(245, 234, 220);
 }
