updated some css styling

--- a/chilesRellenos/styles.css
+++ b/chilesRellenos/styles.css
@@ -27,3 +27,21 @@ img {
 button {
     background-color: rgb(245, 234, 220);
 }
+
+ 
+#h23 {
+    text-decoration: underline;
+}
+
+h3 {
+    text-decoration: underline;
+}
+
+#ing {
+    padding-top: 20px;
+    text-decoration: underline;
+}
+
+a {
+    text-decoration-color: rgb(0, 72, 13);
+}
